1.4.1 - Disable popup notifications on initialize - Fix pop-up width growing due to large words not breaking - Fixed avi not showing up on refresh - Remove quotes in storage if logged out - Fix issue when forum buddy server goes down extension stops working - Remove GA tag in options

--- a/css/popup.less
+++ b/css/popup.less
@@ -122,6 +122,8 @@ div .scrollcontainer {
         overflow-y: scroll;
         //max-height: 400px;
         height: 400px;
+        max-width: @default_width;
+        word-wrap: break-word;
 }
 
 div .post {
